Impersonation alternative implementation using destination serviceAccountName
